[package]
name = "cargo-expand-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
#crate-type = ["staticlib","lib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }

[build-dependencies]
cbindgen = "0.26"

[profile.release]
codegen-units = 1

[profile.release.build-override]
codegen-units = 1
